samples/_failures_safe/1761703041_bebcca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee1bfb52.c: In function ‘main’:
./samples/SAFE/__tmp_ee1bfb52.c:173:5: error: expected expression at end of input
  173 |     for (int k = 0; k < token_count; k++)
      |     ^~~
./samples/SAFE/__tmp_ee1bfb52.c:173:5: error: expected declaration or statement at end of input
